fixed hairline in main content box on mobile, fixes #58

--- a/source/stylesheets/layout.css.sass
+++ b/source/stylesheets/layout.css.sass
@@ -429,6 +429,7 @@ aside
   @media screen and (max-width: $break-small)
     background-color: #{"{{ theme.background_color }}"}
     border-left: 1px solid #{"{{ theme.sidebar_border_color }}"}
+    @include box-sizing(content-box)
     left: 0
     min-height: 100%
     padding: 0
