--- a/source/stylesheets/product.css.sass
+++ b/source/stylesheets/product.css.sass
@@ -38,6 +38,7 @@
 
             img
               display: inline
+              margin-bottom: 8px
 
           .active
             @include opacity(0.25)
